...
  @override
  Widget build(BuildContext context) => MemberScaffold(
    title: widget.reauthenticate
        ? '비밀번호 재확인'
        : widget.signup
        ? '회원가입'
        : '로그인',
    child: AutofillGroup(
      child: Form(
        key: form,
        child: ListView(
          padding: const EdgeInsets.all(24),
          children: [
...
